# rgator_computer_ws

./: .gitignore  README.md
cpp_pid/: CMakeLists.txt  package.xml  plot.py
cpp_pid/include/auvsl_motion_controller/: controller.h  pid.h  server.h
cpp_pid/include/cpp_pid/: environment.h  pid.h
cpp_pid/launch/: pid.launch.py
cpp_pid/src/: controller.cpp  environment.cpp  main.cpp  pid.cpp  server.cpp
dbw/: .~lock.R-Gator CAN Protocol.doc#  R-Gator CAN Protocol.doc  package.xml  setup.cfg  setup.py  steering_mapping.xlsx
dbw/dbw/: can_test.py  can_test_2.py  dbw_neo.py  dbw_read.py  dbw_read_vel.py  dbw_vel.py  dbw_vel_sim.py  test.py
dbw/dbw/C_library/: helper.c  makefile  neo_can.c
dbw/test/: test_all.py  test_boundary_exception.py  test_boundry_output.py  test_boundry_output_btye_slip.py  test_byte_merge.py  test_byte_split.py  test_hex_to_vel.py  test_merge_bytes.py  test_ouput_range.py  test_uint8_steering.py  test_uint8_throttle.py
dbw/test/old/: test_byte_merge.py  test_byte_split.py  test_hex_to_vel.py  test_uint8_steering.py  test_uint8_throttle.py
dbw_msgs/: CMakeLists.txt  package.xml
dbw_msgs/msg/: ASC1.msg  CCVS.msg  Dbw.msg  EAC1.msg  EBC1.msg  EEC1.msg  EEC2.msg  ETC2.msg  ETC5.msg  HRW.msg  LC.msg  Shutdown.msg  TCO1.msg  VEP.msg
gps_nav/: package.xml  setup.py
gps_nav/gps_nav/: path_visual.py  pid.py  pp_pid.py  track_log.py
gps_nav/gps_nav/include/pid_controller/: controller.h  environment.h  server.h
gps_nav/gps_nav/src/: environment.cpp  server.cpp
gps_nav/waypoints/: 1_track.csv  SS_track.csv  S_track.csv
joy_control/: package.xml  setup.py
joy_control/joy_control/: joy_control.py
joy_control/launch/: joy_control_launch.py
